Adjust spacing to avoid overlap in mobile devices

--- a/src/ui/Hud.module.scss
+++ b/src/ui/Hud.module.scss
@@ -3,7 +3,7 @@
   flex-direction: row;
   flex-wrap: nowrap;
   justify-content: space-between;
-  gap: 0.4rem;
+  gap: 0.2rem;
   position: absolute;
   bottom: 0;
   width: 100%;
@@ -18,7 +18,6 @@
 }
 .button {
   display: block;
-  padding: 0.2rem;
   border: none;
   line-height: 1;
   text-shadow: inherit;
@@ -72,7 +71,7 @@
 .hud .tooltip {
   padding: 0.2rem 0.5rem;
   border-radius: 0.15rem;
-  font-size: max(12px, 0.6rem);
+  font-size: max(12px, 0.8rem);
   color: var(--text-color-base);
   background-color: var(--background-color-base);
   opacity: 1;
